{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "2030d848-e2ab-416a-a86b-ea5299c6289b",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "cd86f4c3-35a0-41d3-958b-a893246b149a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Rotate",
                    "type": "Value",
                    "id": "d9a8072d-fa39-47ac-a942-0aae30aafac2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Quit",
                    "type": "Button",
                    "id": "412b651c-9ccc-4f81-a5bf-57be84ee15e5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "378bdd3b-52aa-4006-bb4d-e9ec924b1b51",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "AbsorbPress",
                    "type": "Button",
                    "id": "13475c92-732b-4644-877a-9a348ed369b4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "AbsorbRelease",
                    "type": "Button",
                    "id": "ad8c3f5a-f885-4422-9ba7-840f74dc82de",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Reload",
                    "type": "Button",
                    "id": "d3d4b02a-d8d4-4f9f-ada7-7c66d6d8f5f9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SelectNextEnemy",
                    "type": "Button",
                    "id": "808983be-63c9-4a82-ba7c-c09324f04779",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SelectPreviousEnemy",
                    "type": "Button",
                    "id": "ac36082a-db72-4752-9786-cd5561efe5aa",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "772d8c88-e913-4dbe-b0fe-0b5abde18a3f",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ac166289-7b71-434f-8138-efa1723cb24a",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "acc87bb6-08cf-4a9a-a69f-406ad3388bac",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Quit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e9fce9ef-9143-41d1-a5e7-d52509a08543",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "50f7e89e-8613-4712-bf0c-318f6a2a60d0",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "AbsorbPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "19c4f1cb-3273-46b5-87df-61fef98b256a",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "AbsorbRelease",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fed890af-bb1b-4e6d-98c3-ccb7d8c3e228",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e255a215-e7e0-4970-af10-87d1633f3f2c",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "SelectNextEnemy",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e04fc448-325d-4a58-a2f4-4f64132f9a85",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "SelectPreviousEnemy",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}